# hxd

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  couette.toml  cylinder_re20.toml  lid_cavity.py  lid_cavity_re100.toml  lid_cavity_re1000.toml  poiseuille.toml  simple_lbm_test.py  taylor_green.toml  test_physics.py  vortex_street.py
src/: app.rs  boundary.rs  buffer.rs  config.rs  diff.rs  dump.rs  geometry.rs  gpu.rs  io.rs  lattice.rs  lib.rs  magic.rs  main.rs  mesh.rs  multiphase.rs  output.rs  parallel.rs  patch.rs  physics.rs  solver.rs  stats.rs  thermal.rs  turbulence.rs  ui.rs  validation.rs  watcher.rs
validation/: ghia_re100.csv  ghia_re1000.csv  ghia_re400.csv
