[package]
name = "hxd"
version = "0.1.0"
edition = "2021"
authors = ["Nicola Spieser <redbasecap-buiss@users.noreply.github.com>"]
description = "Modern terminal hex editor in Rust"
license = "MIT"
repository = "https://github.com/redbasecap-buiss/hxd"
keywords = ["hex", "editor", "tui", "binary", "terminal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
memmap2 = "0.9"
anyhow = "1"
