[package]
name = "hxd"
version = "0.3.0"
edition = "2021"
authors = ["Nicola Spieser <quantumnic@users.noreply.github.com>"]
description = "Modern terminal hex editor in Rust"
license = "MIT"
repository = "https://github.com/quantumnic/hxd"
keywords = ["hex", "editor", "tui", "binary", "terminal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
memmap2 = "0.9"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "7"
dirs = "6"
